// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should not override trigger's aria-label attribute 1`] = `
<div>
  <input
    aria-label="Email Address"
    placeholder="Enter email"
    type="email"
  />
</div>
`;

exports[`<Tooltip /> should render 1`] = `
.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  z-index: 1100;
  pointer-events: none;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding: 12px;
  max-width: 200px;
  gap: 4px;
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(0,0%,0%,0.72);
  border-radius: 12px;
  box-shadow: 0px 2px 4px 0px hsla(200,10%,18%,0.06);
  -webkit-backdrop-filter: blur(12px);
  backdrop-filter: blur(12px);
  opacity: 0;
  -webkit-transform: translateY(4px);
  -ms-transform: translateY(4px);
  transform: translateY(4px);
}

.c4.c4.c4.c4.c4 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  margin-right: 4px;
  margin-left: 4px;
}

.c8.c8.c8.c8.c8 {
  color: hsla(0,0%,100%,0.88);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
  word-break: break-word;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border: none;
  border-radius: 8px;
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,89%,51%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 12px;
  padding-right: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: radial-gradient(64px 64px at var(--mouse-x,0%) var(--mouse-y,0%),hsla(0,0%,100%,0.18) 0%,transparent 100%);
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(218,87%,43%,1);
  outline: 1px solid hsla(218,89%,51%,0.09);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18),inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

@media screen and (min-width:320px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

<body>
  <div>
    <button
      aria-describedby=":r0:"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-text"
          >
            Hover me
          </div>
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r2:"
  >
    <div
      class="c5"
      data-blade-component="tooltip"
      id=":r0:"
      pointer-events="none"
      role="tooltip"
      style="position: fixed; left: 0px; top: 0px; transform: translate(4px, -12px);"
      tabindex="-1"
    >
      <div
        class="c6 c7"
        data-blade-component="base-box"
      >
        <p
          class="c8"
          data-blade-component="text"
          letter-spacing="50"
        >
          Hello world
        </p>
        <svg
          aria-hidden="true"
          fill="hsla(0, 0%, 0%, 0.72)"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%; left: -1px;"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            d="M0,0 H14 L8.75,6 Q7,8 5.25,6 Z"
            stroke="none"
          />
          <clippath
            id=":r3:"
          >
            <rect
              height="14"
              width="14"
              x="0"
              y="0"
            />
          </clippath>
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> should render tooltip with custom zIndex 1`] = `
.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  z-index: 9999;
  pointer-events: none;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding: 12px;
  max-width: 200px;
  gap: 4px;
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(0,0%,0%,0.72);
  border-radius: 12px;
  box-shadow: 0px 2px 4px 0px hsla(200,10%,18%,0.06);
  -webkit-backdrop-filter: blur(12px);
  backdrop-filter: blur(12px);
  opacity: 0;
  -webkit-transform: translateY(4px);
  -ms-transform: translateY(4px);
  transform: translateY(4px);
}

.c4.c4.c4.c4.c4 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  margin-right: 4px;
  margin-left: 4px;
}

.c8.c8.c8.c8.c8 {
  color: hsla(0,0%,100%,0.88);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
  word-break: break-word;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border: none;
  border-radius: 8px;
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,89%,51%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 12px;
  padding-right: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: radial-gradient(64px 64px at var(--mouse-x,0%) var(--mouse-y,0%),hsla(0,0%,100%,0.18) 0%,transparent 100%);
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(218,87%,43%,1);
  outline: 1px solid hsla(218,89%,51%,0.09);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18),inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

@media screen and (min-width:320px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

<body>
  <div>
    <button
      aria-describedby=":r8:"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-text"
          >
            Hover me
          </div>
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":ra:"
  >
    <div
      class="c5"
      data-blade-component="tooltip"
      id=":r8:"
      pointer-events="none"
      role="tooltip"
      style="position: fixed; left: 0px; top: 0px; transform: translate(4px, -12px);"
      tabindex="-1"
    >
      <div
        class="c6 c7"
        data-blade-component="base-box"
      >
        <p
          class="c8"
          data-blade-component="text"
          letter-spacing="50"
        >
          Hello world
        </p>
        <svg
          aria-hidden="true"
          fill="hsla(0, 0%, 0%, 0.72)"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%; left: -1px;"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            d="M0,0 H14 L8.75,6 Q7,8 5.25,6 Z"
            stroke="none"
          />
          <clippath
            id=":rb:"
          >
            <rect
              height="14"
              width="14"
              x="0"
              y="0"
            />
          </clippath>
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> should render with title 1`] = `
.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  z-index: 1100;
  pointer-events: none;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding: 12px;
  max-width: 200px;
  gap: 4px;
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(0,0%,0%,0.72);
  border-radius: 12px;
  box-shadow: 0px 2px 4px 0px hsla(200,10%,18%,0.06);
  -webkit-backdrop-filter: blur(12px);
  backdrop-filter: blur(12px);
  opacity: 0;
  -webkit-transform: translateY(4px);
  -ms-transform: translateY(4px);
  transform: translateY(4px);
}

.c4.c4.c4.c4.c4 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  margin-right: 4px;
  margin-left: 4px;
}

.c8.c8.c8.c8.c8 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9 {
  color: hsla(0,0%,100%,0.88);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
  word-break: break-word;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border: none;
  border-radius: 8px;
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,89%,51%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 12px;
  padding-right: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: radial-gradient(64px 64px at var(--mouse-x,0%) var(--mouse-y,0%),hsla(0,0%,100%,0.18) 0%,transparent 100%);
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(218,87%,43%,1);
  outline: 1px solid hsla(218,89%,51%,0.09);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18),inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

@media screen and (min-width:320px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

<body>
  <div>
    <button
      aria-describedby=":r4:"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-text"
          >
            Hover me
          </div>
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r6:"
  >
    <div
      class="c5"
      data-blade-component="tooltip"
      id=":r4:"
      pointer-events="none"
      role="tooltip"
      style="position: fixed; left: 0px; top: 0px; transform: translate(4px, -12px);"
      tabindex="-1"
    >
      <div
        class="c6 c7"
        data-blade-component="base-box"
      >
        <p
          class="c8"
          data-blade-component="text"
          letter-spacing="50"
        >
          Tooltip title
        </p>
        <p
          class="c9"
          data-blade-component="text"
          letter-spacing="50"
        >
          Hello world
        </p>
        <svg
          aria-hidden="true"
          fill="hsla(0, 0%, 0%, 0.72)"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%; left: -1px;"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            d="M0,0 H14 L8.75,6 Q7,8 5.25,6 Z"
            stroke="none"
          />
          <clippath
            id=":r7:"
          >
            <rect
              height="14"
              width="14"
              x="0"
              y="0"
            />
          </clippath>
        </svg>
      </div>
    </div>
  </div>
</body>
`;
